@@ -56,8 +56,6 @@ table {
   --font-family: var(--default-font-family);
   --background-color: var(--default-background-color);
   --color: var(--default-color);
-  --border-width: var(--default-border-width);
-  --border-color: var(--default-border-color);
   --bold-fw: var(--default-bold-fw);
   --serif-font-family: Georgia, 'Times New Roman', serif;
   --sansserif-font-family: system-ui,
@@ -197,7 +195,7 @@ hr {
 }
 
 .div {
-  color: var(--border-color);
+  color: var(--div-color);
 }
 
 .div::before {
@@ -205,9 +203,14 @@ hr {
   display: block;
   width: 100%;
   height: 100%;
-  min-width: var(--border-width);
-  min-height: var(--border-width);
+  min-width: var(--div-width);
+  min-height: var(--div-width);
   background-color: currentColor;
+}
+
+:root {
+  --div-width: var(--default-border-width);
+  --div-color: var(--default-border-color);
 }
 
 .al {
@@ -3761,6 +3764,11 @@ hr {
     padding-top: calc(2rem - var(--border-width));
     padding-bottom: calc(2rem - var(--border-width));
   }
+}
+
+.ba, .bl, .br, .bt, .bb {
+  --border-width: var(--default-border-width);
+  --border-color: var(--default-border-color);
 }
 
 .ba {
