@@ -1,12 +1,19 @@
 .div {
-  color: var(--border-color);
+  color: var(--div-color);
   &::before {
     content: "";
     display: block;
     width: 100%;
     height: 100%;
-    min-width: var(--border-width);
-    min-height: var(--border-width);
+    min-width: var(--div-width);
+    min-height: var(--div-width);
     background-color: currentColor;
   }
+}
+
+:root {
+
+  --div-width: var(--default-border-width);
+  --div-color: var(--default-border-color);
+
 }
